--- a/public/locale/de/common.json
+++ b/public/locale/de/common.json
@@ -41,6 +41,7 @@
   "creationdate": "Erstellungsdatum",
   "creator": "Erstellt von",
   "createdBy": "Erstellt von",
+  "currentVersion": "Aktuelle Version",
   "importedBy": "Importiert von",
   "updatedBy": "Aktualisiert durch",
   "csvFormat": "Dateiformat (.csv)",
@@ -92,12 +93,17 @@
   "errorWrongDepth": "Falsche Endtiefe",
   "errorWrongDepthSolution1": "Tiefe der letzten Schicht ({{lDepth}} m) stimmt nicht mit der Endtiefe ({{bDepth}}) überein. Ändern Sie das Feld Basis-MD manuell.",
   "expand": "Aufklappen",
+  "export": "Exportieren",
+  "exportInProgress": "Export in Bearbeitung",
   "extendlower": "Untere Schicht zum Top ausdehnen",
   "extendupper": "Obere Schicht nach unten ausdehnen",
   "filterByHierarchicalUnits": "Nach hierarchischen Einheiten filtern",
   "filterbymap": "Mit Karteausschinitt filtern",
   "filterByName": "Nach Name filtern",
   "firstname": "Vorname",
+  "flowPublication": "Fluss der Veröffentlichung",
+  "flowPublicationStatus": "Status der Veröffentlichung",
+  "flowRestart": "Neustart des Flusses",
   "french": "französisch",
   "from": "von",
   "fromdepth": "von Tiefe",
@@ -122,12 +128,15 @@
   "hrs": "HRS",
   "iagree": "Ich stimme zu",
   "identifierManager": "Kennung verwalten",
+  "importedData": "Importierte Daten",
   "inclination": "Inklination (°)",
   "inclinationdirection": "Einfallsrichtung (°)",
   "invertedDepth": "Umgekehrte Tiefen",
+  "inProgress": "in Bearbeitung",
   "italian": "italienisch",
   "kind": "Bohrtyp",
   "landuse": "Landnutzung",
+  "lastExport": "Hier ist die letzte Export",
   "lastname": "Nachname",
   "layer_alteration": "Alteration",
   "layer_chronostratigraphy": "Chronostratigrafie",
@@ -203,6 +212,7 @@
   "overlay": "Dargestellte Karten",
   "password": "Passwort",
   "preview": "Vorschau",
+  "previousVersions": "Frühere Versionen",
   "project_name": "Projektname",
   "public": "Öffentlich",
   "public_name": "Öffentlicher Name",
@@ -230,6 +240,8 @@
   "saving": "Speichern",
   "search": "Suchen",
   "searchfilters": "Suchfilter",
+  "searchFiltersBoreholes": "Suchfilter von borehole",
+  "searchFiltersLayers": "Stratigraphie-Schicht filter",
   "setmanually": "Manuell einstellen",
   "show": "{{what}} anzeigen",
   "showallfields": "Alle Felder anzeigen",
@@ -275,7 +287,5 @@
   "supplier": "Anbieter",
   "yes": "Ja",
   "you": "Du",
-  "yourcomments": "Ihre Kommentare",
-  "importedData": "Importierte Daten",
-  "export": "Exportieren"
+  "yourcomments": "Ihre Kommentare"
 }
