--- a/public/locale/en/common.json
+++ b/public/locale/en/common.json
@@ -41,6 +41,7 @@
   "creationdate": "Creation date",
   "creator": "Created by",
   "createdBy": "Created by",
+  "currentVersion": "Current version",
   "importedBy": "Imported by",
   "updatedBy": "Updated by",
   "csvFormat": "Comma-Separated Values (CSV) format",
@@ -92,12 +93,17 @@
   "errorWrongDepth": "Wrong depth",
   "errorWrongDepthSolution1": "Last layer depth ({{lDepth}}) not equals to total borehole depth {{bDepth}}. Manually change the Base MD field.",
   "expand": "expand",
+  "export": "Export",
+  "exportInProgress": "Export in progress",
   "extendlower": "Extend lower layer to top",
   "extendupper": "Extend upper layer to bottom",
   "filterByHierarchicalUnits": "Filter by hierarchical units",
   "filterbymap": "Filter by map",
   "filterByName": "Filter by name",
   "firstname": "Firstname",
+  "flowPublication": "Publication workflow",
+  "flowPublicationStatus": "Publication status",
+  "flowRestart": "Restart the workflow",
   "french": "french",
   "from": "from",
   "fromdepth": "from depth",
@@ -122,12 +128,15 @@
   "hrs": "HRS",
   "iagree": "I agree",
   "identifierManager": "Manage identifiers",
+  "importedData": "Imported data",
   "inclination": "Inclination (°)",
   "inclinationdirection": "Inclination direction (°)",
   "invertedDepth": "Inverted depths",
+  "inProgress": "in progress",
   "italian": "italian",
   "kind": "Drilling type",
   "landuse": "Land use",
+  "lastExport": "Here the last export",
   "lastname": "Lastname",
   "layer_alteration": "Alteration",
   "layer_chronostratigraphy": "Chrono-stratigraphie",
@@ -203,6 +212,7 @@
   "overlay": "Maps displayed",
   "password": "Password",
   "preview": "preview",
+  "previousVersions": "Previous versions",
   "project_name": "Project name",
   "public": "Public",
   "public_name": "Public name",
@@ -230,6 +240,8 @@
   "saving": "saving",
   "search": "search",
   "searchfilters": "Search filters",
+  "searchFiltersBoreholes": "Borehole's filters",
+  "searchFiltersLayers": "Stratigraphy layer's filters",
   "setmanually": "Set manually",
   "show": "show {{what}}",
   "showallfields": "show all fields",
@@ -275,7 +287,5 @@
   "supplier": "Supplier",
   "yes": "Yes",
   "you": "you",
-  "yourcomments": "Your comments",
-  "importedData": "Imported data",
-  "export": "Export"
+  "yourcomments": "Your comments"
 }
