--- a/public/locale/fr/common.json
+++ b/public/locale/fr/common.json
@@ -41,6 +41,7 @@
   "creationdate": "Date de création",
   "creator": "Créé par",
   "createdBy": "Créé par",
+  "currentVersion": "Version actuelle",
   "importedBy": "Importé par",
   "updatedBy": "Mis à jour par",
   "csvFormat": "Format CSV",
@@ -92,12 +93,17 @@
   "errorWrongDepth": "Mauvaise profondeur",
   "errorWrongDepthSolution1": "La profondeur de la dernière couche ({{lDepth}}m) ne coïncide pas aveccomme indiqué dans les métadonnées de forage ({{bDepth}}m). Modifiez manuellement le champ Base MD.",
   "expand": "Expand",
+  "export": "Exporter",
+  "exportInProgress": "Exportation en cours",
   "extendlower": "Étendre la couche inférieure jusqu'au sommet",
   "extendupper": "Étendre la couche supérieure à la couche inférieure",
   "filterByHierarchicalUnits": "Filtrer par unité (hiérarchique)",
   "filterbymap": "Filtre avec la carte",
   "filterByName": "Filtrer par nom",
   "firstname": "Prenom",
+  "flowPublication": "Flux de publication",
+  "flowPublicationStatus": "État de la publication",
+  "flowRestart": "Redémarrer le flux",
   "french": "français",
   "from": "De",
   "fromdepth": "De la profondeur",
@@ -122,12 +128,15 @@
   "hrs": "HRS",
   "iagree": "J'accepte",
   "identifierManager": "Gérer les identifiants",
+  "importedData": "Données importées",
   "inclination": "Inclinaison (°)",
   "inclinationdirection": "Direction d'inclinaison(°)",
   "invertedDepth": "Profondeurs inversées",
+  "inProgress": "en cours",
   "italian": "italien",
   "kind": "Type de forage",
   "landuse": "Utilisation du sol",
+  "lastExport": "Voici la dernière exportation",
   "lastname": "Nom de famille",
   "layer_alteration": "Modification",
   "layer_chronostratigraphy": "Chrono-stratigraphie",
@@ -203,6 +212,7 @@
   "overlay": "Cartes affichées",
   "password": "Mot de passe",
   "preview": "preview",
+  "previousVersions": "Versions précédentes",
   "project_name": "Nom du projet",
   "public": "Public",
   "public_name": "Nom public",
@@ -230,6 +240,8 @@
   "saving": "Enregistrement",
   "search": "Recherche",
   "searchfilters": "Filtres de recherche",
+  "searchFiltersBoreholes": "Filtres du forage",
+  "searchFiltersLayers": "Filtres de la couche stratigraphique",
   "setmanually": "Régler manuellement",
   "show": "Afficher {{what}}",
   "showallfields": "afficher tous les champs",
@@ -275,7 +287,5 @@
   "supplier": "Fournisseur",
   "yes": "oui",
   "you": "tu",
-  "yourcomments": "Vos commentaires",
-  "importedData": "Données importées",
-  "export": "Exporter"
+  "yourcomments": "Vos commentaires"
 }
