--- a/public/locale/it/common.json
+++ b/public/locale/it/common.json
@@ -41,6 +41,7 @@
   "creationdate": "Data di creazione",
   "creator": "Creato da",
   "createdBy": "Creato da",
+  "currentVersion": "Versione corrente",
   "importedBy": "Importato da",
   "updatedBy": "Aggiornato da",
   "csvFormat": "Formato CSV",
@@ -92,12 +93,17 @@
   "errorWrongDepth": "Profondità errata",
   "errorWrongDepthSolution1": "La profondità dell'ultimo layer ({{lDepth}}) non coincide con quanto dichiarato nei metadati sul sondaggio ({{bDepth}}). Modifica manualmente il campo Base MD.",
   "expand": "espandere",
+  "export": "Esporta",
+  "exportInProgress": "Esportazione in corso",
   "extendlower": "Estendi livello inferiore in alto",
   "extendupper": "Estendi livello superiore in basso",
   "filterByHierarchicalUnits": "Filtra per unità (gerarchicamente)",
   "filterbymap": "Filtra da mappa",
   "filterByName": "Filtra per nome",
   "firstname": "Nome",
+  "flowPublication": "Flusso di pubblicazione",
+  "flowPublicationStatus": "Stato della pubblicazione",
+  "flowRestart": "Riavviare il flusso di lavoro",
   "french": "francese",
   "from": "da",
   "fromdepth": "dalla profondità",
@@ -122,12 +128,15 @@
   "hrs": "HRS",
   "iagree": "Accetto",
   "identifierManager": "Gestione degli identificatori",
+  "importedData": "Dati importati",
   "inclination": "Inclinazione (°)",
   "inclinationdirection": "Direzione inclinazione (°)",
   "invertedDepth": "Profondità invertite",
+  "inProgress": "in corso",
   "italian": "italiano",
   "kind": "Tipologia di perforazione",
   "landuse": "Uso del suolo",
+  "lastExport": "Ecco l'ultima esportazione",
   "lastname": "Cognome",
   "layer_alteration": "Alterazione",
   "layer_chronostratigraphy": "Chrono-stratigrafia",
@@ -203,6 +212,7 @@
   "overlay": "Mappe visualizzate",
   "password": "Password",
   "preview": "anteprima",
+  "previousVersions": "Versioni precedenti",
   "project_name": "Nome progetto",
   "public": "Pubblico",
   "public_name": "Nome pubblico",
@@ -230,6 +240,8 @@
   "saving": "salvataggio",
   "search": "cerca",
   "searchfilters": "Filtri di ricerca",
+  "searchFiltersBoreholes": "Filtri specifici alla perforazione",
+  "searchFiltersLayers": "Filtri dei livelli della stratigrafia",
   "setmanually": "Impostare manualmente",
   "show": "Mostra {{what}}",
   "showallfields": "Mostra tutti i campi",
@@ -275,7 +287,5 @@
   "supplier": "Fornitore",
   "yes": "Sì",
   "you": "te",
-  "yourcomments": "Commenti",
-  "importedData": "Dati importati",
-  "export": "Esporta"
+  "yourcomments": "Commenti"
 }
