added transalations for completions

--- a/public/locale/en/common.json
+++ b/public/locale/en/common.json
@@ -1,6 +1,7 @@
 {
   "version": "1.0.0",
   "add": "Add",
+  "addInstrument": "Add instrument",
   "address": "Address",
   "admin": "Administrator",
   "afterdate": "After this date",
@@ -29,12 +30,14 @@
   "bulkEditing": "Bulk editing",
   "cancel": "cancel",
   "canton": "Canton",
+  "casing": "Casing",
   "centerselected": "Center to selected",
   "chro_str_top_bedrock": "Chronostrati top bedrock",
   "city": "City",
   "clickLayer": "Click on a layer for details",
   "close": "Close",
   "collapse": "collapse",
+  "completion": "Completion",
   "confirm": "Confirm",
   "copy": "Copy selected",
   "create": "Create",
@@ -47,6 +50,9 @@
   "csvFormat": "Comma-Separated Values (CSV) format",
   "cuttings": "Cuttings",
   "date": "Date",
+  "dateSpudCasing": "Spud date, date completion works started",
+  "dateFinishCasing": "Date completion works were finished",
+  "dateAbandonmentCasing": "Date when borehole was abandoned",
   "degree": "degree",
   "delete": "Delete",
   "deleteForever": "Delete forever",
@@ -68,6 +74,7 @@
   "editingEnabled": "Editing started",
   "editingStart": "Start editing",
   "editingStop": "Stop editing",
+  "elevationCasing": "Elevation of top of casing, in m.a.s.l",
   "elevation_z": "Elevation (masl)",
   "enable": "enable",
   "enabled": "enabled",
@@ -89,6 +96,9 @@
   "errorMoreerror": "{{number}} errors found",
   "errorOneerror": "One error found",
   "errorOverlap": "Overlapping layers",
+  "errorEndPoint": "You should add end point",
+  "errorStartEditing": "You should press start editing button",
+  "errrorStartPoint": "You should add start point",
   "errorStartWrong": "First layer not starting from the surface",
   "errorWrongDepth": "Wrong depth",
   "errorWrongDepthSolution1": "Last layer depth ({{lDepth}}) not equals to total borehole depth {{bDepth}}. Manually change the Base MD field.",
@@ -97,6 +107,7 @@
   "exportInProgress": "Export in progress",
   "extendlower": "Extend lower layer to top",
   "extendupper": "Extend upper layer to bottom",
+  "filling": "Filling",
   "filterByHierarchicalUnits": "Filter by hierarchical units",
   "filterbymap": "Filter by map",
   "filterByName": "Filter by name",
@@ -131,10 +142,15 @@
   "importedData": "Imported data",
   "inclination": "Inclination (°)",
   "inclinationdirection": "Inclination direction (°)",
+  "instrument": "Instrument",
   "invertedDepth": "Inverted depths",
   "inProgress": "in progress",
   "italian": "italian",
   "kind": "Drilling type",
+  "kindCasing": "Type of casing",
+  "kindCasingLayer": "Type of casing element",
+  "kindFilling": "Type of filling",
+  "kindInstrument": "Type of instrument",
   "landuse": "Land use",
   "lastExport": "Here the last export",
   "lastname": "Lastname",
@@ -187,7 +203,10 @@
   "loginScreen": "Login screen",
   "mainStratigraphy": "This is the main stratigraphy",
   "map": "Map",
+  "materialCasingLayer": "Material casing element is made of",
+  "materialFilling": "Filling material",
   "meter": "meter",
+  "msgCasingEmpty": "No casing available",
   "msgDeleteUser": "The selected user can be deleted forever because currently there is not any trace of activity in the database.",
   "msgDeleteWorkgroup": "The selected workgroup can be deleted forever because currently there are not any traces of activities in the database.",
   "msgDeletingUserTip": "the user will be deleted from the database, but later you will be able to recreate the same user again.",
@@ -197,15 +216,19 @@
   "msgDisclaimer_publish_title": "Publish disclaimer",
   "msgEnablingUser": "You are going to re-enable the user \"{{user}}\". This user will be able to login and apply modifications based on its roles. ",
   "msgEnablingWorkgroup": "You are going to reenable the \"{{workgroup}}\" workgroup. Users belonging to this workgroup will be able to apply again modifications based on theirs roles.",
+  "msgFillingEmpty": "No filling available",
   "msgIdentifierAlreadyUsed": "Identifier already used",
   "msgIdentifierDeletionAlreadyUsed": "Connot delete in use identifier",
+  "msgInstrumentsEmpty": "Instruments are associated with casings: no casings available",
   "msgReenablingTip": "you will be able to re-enable it later.",
+  "msgStartigraphyEmpty": "No stratigraphy available",
   "municipality": "Municipality",
   "name": "Name",
   "new": "New {{what}}",
   "newBorehole": "New borehole",
   "no": "No",
   "noComments": "No comments",
+  "nothingToShow": "Nothing to show",
   "np": "Unknown",
   "oneSelected": "One borehole selected",
   "original_name": "Original name",
@@ -224,6 +247,7 @@
   "qt_length": "QC depth",
   "qt_location": "CQ Coordinates",
   "qt_top_bedrock": "QC top bedrock",
+  "refElevationCasing": "Reference point of elevation",
   "refresh": "refresh",
   "reject": "Reject",
   "rejected": "Rejected",
@@ -241,9 +265,10 @@
   "search": "search",
   "searchfilters": "Search filters",
   "searchFiltersBoreholes": "Borehole's filters",
-  "searchFiltersLayers": "Stratigraphy layer's filters",
+  "searchFiltersLayers": "Stratigraphy layers search filters",
   "setmanually": "Set manually",
   "show": "show {{what}}",
+  "showAll": "Show all",
   "showallfields": "show all fields",
   "showHistory": "Show history",
   "someSelected": "{{howMany}} boreholes selected",
@@ -252,12 +277,13 @@
   "status": "status",
   "statuscomplete": "Completed",
   "statuscontrol": "Scientific check",
+  "statusInstrument": "Status of the instrument",
   "statusedit": "Change in progress",
   "statuspublic": "Publish",
   "statusvalid": "Validation",
   "stratigraphy": "Stratigraphy",
   "stratigraphy_name": "Name / Version",
-  "stratigraphyfields": "Stratigraphy fields",
+  "stratigraphyfields": "Stratigraphy form fields",
   "submit": "Submit",
   "submitted": "Submitted",
   "sure": "Are you sure?",
