--- a/public/locale/fr/common.json
+++ b/public/locale/fr/common.json
@@ -1,6 +1,7 @@
 {
   "version": "1.0.0",
   "add": "Ajouter",
+  "addInstrument": "Ajouter un instrument",
   "address": "Adresse",
   "admin": "Administrateur",
   "afterdate": "Après cette date",
@@ -29,12 +30,14 @@
   "bulkEditing": "Édition en gros",
   "cancel": "Annuler",
   "canton": "Canton",
+  "casing": "Casing",
   "centerselected": "Centre sélectionné",
   "chro_str_top_bedrock": "Chronostrates du substrat supérieur",
   "city": "Ville",
   "clickLayer": "Cliquez sur un calque pour plus d'informations",
   "close": "Fermer",
   "collapse": "Réduire",
+  "completion": "Complétion",
   "confirm": "Confirmer",
   "copy": "Créer une copie",
   "create": "Créer",
@@ -47,6 +50,9 @@
   "csvFormat": "Format CSV",
   "cuttings": "Cut",
   "date": "Date",
+  "dateSpudCasing": "Date du début des travaux",
+  "dateFinishCasing": "Date de fin des travaux",
+  "dateAbandonmentCasing": "Date d'abandon du forage",
   "degree": "Degrés",
   "delete": "Supprimer",
   "deleteForever": "Supprimer définitivement",
@@ -68,6 +74,7 @@
   "editingEnabled": "Le changement a commencé",
   "editingStart": "Commencer l'édition",
   "editingStop": "Arrêtez l'édition",
+  "elevationCasing": "Altitude du sommet du tubage, en m.a.s.l.",
   "elevation_z": "Altitude (msl)",
   "enable": "Activer",
   "enabled": "Activé",
@@ -89,6 +96,9 @@
   "errorMoreerror": "{{number}} erreurs constatées",
   "errorOneerror": "Une erreur constatée",
   "errorOverlap": "Calques superposés",
+  "errorEndPoint": "Vous devriez ajouter le point final",
+  "errorStartEditing": "Vous devez appuyer sur le bouton: Commencer l’édition",
+  "errrorStartPoint": "Vous devriez ajouter le point de départ",
   "errorStartWrong": "La première couche ne part pas de la surface",
   "errorWrongDepth": "Mauvaise profondeur",
   "errorWrongDepthSolution1": "La profondeur de la dernière couche ({{lDepth}}m) ne coïncide pas aveccomme indiqué dans les métadonnées de forage ({{bDepth}}m). Modifiez manuellement le champ Base MD.",
@@ -97,6 +107,7 @@
   "exportInProgress": "Exportation en cours",
   "extendlower": "Étendre la couche inférieure jusqu'au sommet",
   "extendupper": "Étendre la couche supérieure à la couche inférieure",
+  "filling": "Remplissage",
   "filterByHierarchicalUnits": "Filtrer par unité (hiérarchique)",
   "filterbymap": "Filtre avec la carte",
   "filterByName": "Filtrer par nom",
@@ -131,10 +142,15 @@
   "importedData": "Données importées",
   "inclination": "Inclinaison (°)",
   "inclinationdirection": "Direction d'inclinaison(°)",
+  "instrument": "Instrument",
   "invertedDepth": "Profondeurs inversées",
   "inProgress": "en cours",
   "italian": "italien",
   "kind": "Type de forage",
+  "kindCasing": "Type de tubage",
+  "kindCasingLayer": "Type d'élément de tubage",
+  "kindFilling": "Type de remplissage",
+  "kindInstrument": "Type d'instrument",
   "landuse": "Utilisation du sol",
   "lastExport": "Voici la dernière exportation",
   "lastname": "Nom de famille",
@@ -187,7 +203,10 @@
   "loginScreen": "Écran de connexion",
   "mainStratigraphy": "Ceci est la stratigraphie principale",
   "map": "Carte",
+  "materialCasingLayer": "Matériau de l'enveloppe",
+  "materialFilling": "Matériau de remplissage",
   "meter": "Mètres",
+  "msgCasingEmpty": "Aucun tubage disponible",
   "msgDeleteUser": "L'utilisateur sélectionné peut être supprimé par toujours parce qu'il n'y a aucune trace pour le moment d'activité dans la base de données.",
   "msgDeleteWorkgroup": "Depuis, il n'y a aucune trace d'activité dans la base de données, le groupe de travail sélectionné peutêtre éliminé pour toujours.",
   "msgDeletingUserTip": "l'utilisateur sera supprimé de la base de données, mais dans Le même utilisateur peut être recréé à nouveau.",
@@ -197,15 +216,19 @@
   "msgDisclaimer_publish_title": "Publier les conditions de service",
   "msgEnablingUser": "Vous êtes sur le point de réactiver \"{{user}}\". Cet utilisateur pourra se connecter et appliquez les modifications en fonction de vos rôles.",
   "msgEnablingWorkgroup": "Vous réactiverez le groupe de travail \"{{workgroup}}\".Utilisateurs appartenant à ce groupe de travailpeut appliquer les modifications en fonction de leurs rôles.",
+  "msgFillingEmpty": "Aucun remplissage disponible",
   "msgIdentifierAlreadyUsed": "Identifiant déjà utilisé",
   "msgIdentifierDeletionAlreadyUsed": "Ne peut pas supprimer l'identifiant en cours d'utilisation",
+  "msgInstrumentsEmpty": "Les instruments sont associés à des tubages : aucun tubage disponible",
   "msgReenablingTip": "tu pourras le réactiver plus tard",
+  "msgStartigraphyEmpty": "Aucune stratigraphie disponible",
   "municipality": "Municipalité",
   "name": "Nome",
   "new": "Neuf {{what}}",
   "newBorehole": "Nouveau forage",
   "no": "Non",
   "noComments": "Pas de commentaires",
+  "nothingToShow": "Rien à montrer",
   "np": "Inconnu",
   "oneSelected": "un perforation sélectionné",
   "original_name": "Nom original",
@@ -224,6 +247,7 @@
   "qt_length": "Qualité de profondeur",
   "qt_location": "Qualité coordonnée",
   "qt_top_bedrock": "Substrat supérieur QC",
+  "refElevationCasing": "Point de référence de l'élévation",
   "refresh": "Charge",
   "reject": "Rejeter",
   "rejected": "Rejeté",
@@ -244,6 +268,7 @@
   "searchFiltersLayers": "Filtres de la couche stratigraphique",
   "setmanually": "Régler manuellement",
   "show": "Afficher {{what}}",
+  "showAll": "Afficher tous les instruments",
   "showallfields": "afficher tous les champs",
   "showHistory": "Montrer l'histoire",
   "someSelected": "{{howMany}} perforations sélectionnés",
@@ -252,6 +277,7 @@
   "status": "ètat ",
   "statuscomplete": "Terminé",
   "statuscontrol": "Contrôle scientifique",
+  "statusInstrument": "Statut de l'instrument",
   "statusedit": "Changement",
   "statuspublic": "Publiquer",
   "statusvalid": "Validation",
