--- a/public/locale/de/common.json
+++ b/public/locale/de/common.json
@@ -1,6 +1,7 @@
 {
   "version": "1.0.0",
   "add": "Hinzufüden",
+  "addInstrument": "Instrument hinzufügen",
   "address": "Addresse",
   "admin": "Administrator",
   "afterdate": "von Datum",
@@ -29,12 +30,14 @@
   "bulkEditing": "Bulk-Editing",
   "cancel": "Abbrechen",
   "canton": "Kanton",
+  "casing": "",
   "centerselected": "Auf Auswahl zentrieren",
   "chro_str_top_bedrock": "Chronostrati Top Fels",
   "city": "Gemeinde",
   "clickLayer": "Klicken Sie für Informationen",
   "close": "Schlissen",
   "collapse": "Zuklappen",
+  "completion": "",
   "confirm": "Bestätigen",
   "copy": "Kopie erstellen",
   "create": "Erstellen",
@@ -47,6 +50,9 @@
   "csvFormat": "Dateiformat (.csv)",
   "cuttings": "Schnitt",
   "date": "Datum",
+  "dateSpudCasing": "Datum des Beginns der Arbeiten",
+  "dateFinishCasing": "Datum die Arbeiten beendet",
+  "dateAbandonmentCasing": "Datum der Aufgabe",
   "degree": "Grad",
   "delete": "Löschen",
   "deleteForever": "Dauerhaft löschen",
@@ -68,6 +74,7 @@
   "editingEnabled": "Die Bearbeitung hat begonnen",
   "editingStart": "Bearbeitung beginnen",
   "editingStop": "Bearbeitung beenden",
+  "elevationCasing": "Höhe der Spitze der Rohrleitung, in m.ü.M.",
   "elevation_z": "Ansatzhöhe (müM)",
   "enable": "Aktivieren",
   "enabled": "Aktiviert",
@@ -89,6 +96,9 @@
   "errorMoreerror": "{{number}} Fehler gefunden",
   "errorOneerror": "Ein Fehler gefunden",
   "errorOverlap": "Überlappende Schichten",
+  "errorEndPoint": "Sie sollten den Endpunkt hinzufügen",
+  "errorStartEditing": "Sie sollten die Schaltfläche \"Bearbeitung beginnen\" drücken",
+  "errrorStartPoint": "Sie sollten den Startpunkt hinzufügen",
   "errorStartWrong": "Erste Schicht beginnt nicht an der Geländeoberfläche",
   "errorWrongDepth": "Falsche Endtiefe",
   "errorWrongDepthSolution1": "Tiefe der letzten Schicht ({{lDepth}} m) stimmt nicht mit der Endtiefe ({{bDepth}}) überein. Ändern Sie das Feld Basis-MD manuell.",
@@ -97,6 +107,7 @@
   "exportInProgress": "Export in Bearbeitung",
   "extendlower": "Untere Schicht zum Top ausdehnen",
   "extendupper": "Obere Schicht nach unten ausdehnen",
+  "filling": "Befüllung",
   "filterByHierarchicalUnits": "Nach hierarchischen Einheiten filtern",
   "filterbymap": "Mit Karteausschinitt filtern",
   "filterByName": "Nach Name filtern",
@@ -131,10 +142,15 @@
   "importedData": "Importierte Daten",
   "inclination": "Inklination (°)",
   "inclinationdirection": "Einfallsrichtung (°)",
+  "instrument": "Instrument",
   "invertedDepth": "Umgekehrte Tiefen",
   "inProgress": "in Bearbeitung",
   "italian": "italienisch",
   "kind": "Bohrtyp",
+  "kindCasing": "Typ der Rohrleitung",
+  "kindCasingLayer": "Typ des Rohrelements",
+  "kindFilling": "Typ der Füllung",
+  "kindInstrument": "Typ des Geräts",
   "landuse": "Landnutzung",
   "lastExport": "Hier ist die letzte Export",
   "lastname": "Nachname",
@@ -187,7 +203,10 @@
   "loginScreen": "Login-Bildschirm",
   "mainStratigraphy": "Dies ist die Hauptstratigraphie",
   "map": "Karte",
+  "materialCasingLayer": "Material",
+  "materialFilling": "Material der Füllung",
   "meter": "Meter",
+  "msgCasingEmpty": "Kein Rohr verfügbar",
   "msgDeleteUser": "Der ausgewählte Benutzer kann für immer gelöscht werden, da derzeit keine Aktivitäten in der Datenbank vorhanden sind.",
   "msgDeleteWorkgroup": "Die ausgewählte Arbeitsgruppe kann für immer gelöscht werden, da derzeit keine Aktivitäten in der Datenbank vorhanden sind.",
   "msgDeletingUserTip": "Der Benutzer wird aus der Datenbank gelöscht.",
@@ -197,15 +216,19 @@
   "msgDisclaimer_publish_title": "Haftungsausschluss veröffentlichen",
   "msgEnablingUser": "Der Benutzer \"{{user}}\" wird wieder aktiviert. Dieser Benutzer kann sich dann wieder anmelden und Änderungen basierend auf seinen Rollen vornehmen.",
   "msgEnablingWorkgroup": "Die Arbeitsgruppe \"{{workgroup}}\" wird wieder aktiviert. Benutzer, die zu dieser Arbeitsgruppe gehören, können Änderungen basierend auf ihren Rollen vornehmen.",
+  "msgFillingEmpty": "Kein Rohr verfügbar",
   "msgIdentifierAlreadyUsed": "Identifikator bereits vergeben.",
   "msgIdentifierDeletionAlreadyUsed": "Identifikator kann nicht im Gebrauch gelöscht werden",
+  "msgInstrumentsEmpty": "Instrumente sind mit Rohren verbunden: keine Rohre verfügbar",
   "msgReenablingTip": "Sie können ihn später wieder aktivieren.",
+  "msgStartigraphyEmpty": "Keine Stratigraphie verfügbar",
   "municipality": "Gemeinde",
   "name": "Name",
   "new": "Neue {{what}}",
   "newBorehole": "Neue Bohrung",
   "no": "Nein",
   "noComments": "Keine Kommentare",
+  "nothingToShow": "Nichts zu zeigen",
   "np": "Keine Angabe",
   "oneSelected": "Ein Bohrung ausgewählt",
   "original_name": "Originalname",
@@ -224,6 +247,7 @@
   "qt_length": "QC Tiefe",
   "qt_location": "CQ Koordinaten",
   "qt_top_bedrock": "QC Top Fels",
+  "refElevationCasing": "Bezugspunkt der Höhe",
   "refresh": "Aktualisieren",
   "reject": "Ablehnen",
   "rejected": "Abgelehnt",
@@ -244,6 +268,7 @@
   "searchFiltersLayers": "Stratigraphie-Schicht filter",
   "setmanually": "Manuell einstellen",
   "show": "{{what}} anzeigen",
+  "showAll": "Alle anzeigen",
   "showallfields": "Alle Felder anzeigen",
   "showHistory": "Geschichte anzeigen",
   "someSelected": "{{howMany}} Bohrungen ausgewählt",
@@ -252,6 +277,7 @@
   "status": "status",
   "statuscomplete": "fertiggestellt",
   "statuscontrol": "wissenschaftlich geprüft",
+  "statusInstrument": "Status des Geräts",
   "statusedit": "in Bearbeitung",
   "statuspublic": "veröffentlicht",
   "statusvalid": "validiert",
