--- a/public/locale/it/common.json
+++ b/public/locale/it/common.json
@@ -1,6 +1,7 @@
 {
   "version": "1.0.0",
   "add": "Aggiungi",
+  "addInstrument": "Aggiungi uno strumento",
   "address": "Indirizzo",
   "admin": "Amministratore",
   "afterdate": "A partire da data",
@@ -29,12 +30,14 @@
   "bulkEditing": "Modifica in blocco",
   "cancel": "annulla",
   "canton": "Cantone",
+  "casing": "Involucro",
   "centerselected": "Centra selezionato",
   "chro_str_top_bedrock": "Chronostrati top substrato",
   "city": "Città",
   "clickLayer": "Clic su un layer per le informazioni",
   "close": "Chiudi",
   "collapse": "collassare",
+  "completion": "Completamento",
   "confirm": "Conferma",
   "copy": "Crea copia",
   "create": "Crea",
@@ -47,6 +50,9 @@
   "csvFormat": "Formato CSV",
   "cuttings": "Taglio",
   "date": "Data",
+  "dateSpudCasing": "Data inizio lavori",
+  "dateFinishCasing": "Data completazione lavori",
+  "dateAbandonmentCasing": "Data di abbandono",
   "degree": "gradi",
   "delete": "Elimina",
   "deleteForever": "Elimina definitivamente",
@@ -68,6 +74,7 @@
   "editingEnabled": "Modifica avviata",
   "editingStart": "Inizia modifica",
   "editingStop": "Interrompi modifica",
+  "elevationCasing": "Altezza della cima dell’involucro (m.s.m)",
   "elevation_z": "Altitudine (msl)",
   "enable": "abilitare",
   "enabled": "abilitati",
@@ -89,6 +96,9 @@
   "errorMoreerror": "{{number}} errori trovati",
   "errorOneerror": "Un errore trovato",
   "errorOverlap": "Sovrapposizione layers",
+  "errorEndPoint": "Dovresti aggiungere il punto di arrivo",
+  "errorStartEditing": "Dovresti premere il pulsante di iniziare la modifica",
+  "errrorStartPoint": "Dovresti aggiungere il punto di partenza",
   "errorStartWrong": "Il primo layer non inizia dalla superficie",
   "errorWrongDepth": "Profondità errata",
   "errorWrongDepthSolution1": "La profondità dell'ultimo layer ({{lDepth}}) non coincide con quanto dichiarato nei metadati sul sondaggio ({{bDepth}}). Modifica manualmente il campo Base MD.",
@@ -97,6 +107,7 @@
   "exportInProgress": "Esportazione in corso",
   "extendlower": "Estendi livello inferiore in alto",
   "extendupper": "Estendi livello superiore in basso",
+  "filling": "Riempimento",
   "filterByHierarchicalUnits": "Filtra per unità (gerarchicamente)",
   "filterbymap": "Filtra da mappa",
   "filterByName": "Filtra per nome",
@@ -131,10 +142,15 @@
   "importedData": "Dati importati",
   "inclination": "Inclinazione (°)",
   "inclinationdirection": "Direzione inclinazione (°)",
+  "instrument": "Strumenti",
   "invertedDepth": "Profondità invertite",
   "inProgress": "in corso",
   "italian": "italiano",
   "kind": "Tipologia di perforazione",
+  "kindCasing": "Tipologia involucro",
+  "kindCasingLayer": "Tipologia elemento involucro",
+  "kindFilling": "Tipologia riempimento",
+  "kindInstrument": "Tipologia strumento",
   "landuse": "Uso del suolo",
   "lastExport": "Ecco l'ultima esportazione",
   "lastname": "Cognome",
@@ -187,7 +203,10 @@
   "loginScreen": "Schermata di login",
   "mainStratigraphy": "Questa è la stratigrafia principale",
   "map": "Mappa",
+  "materialCasingLayer": "Materiale dell’involucro",
+  "materialFilling": "Materiale di riempimento",
   "meter": "metri",
+  "msgCasingEmpty": "Nessuna tubazione disponibile",
   "msgDeleteUser": "L'utente selezionato può essere eliminato per sempre perché al momento non esiste alcuna traccia di attività nel database.",
   "msgDeleteWorkgroup": "Visto che al momento non ci sono tracce di attività nel database, il gruppo di lavoro selezionato, può essere eliminato per sempre.",
   "msgDeletingUserTip": "l'utente verrà eliminato dal database, ma in seguito sarà possibile ricreare nuovamente lo stesso utente.",
@@ -197,15 +216,19 @@
   "msgDisclaimer_publish_title": "Pubblica i termini",
   "msgEnablingUser": "Stai per riattivare l'utente \"{{user}}\". Questo utente sarà in grado di accedere e applicare le modifiche in base ai suoi ruoli.",
   "msgEnablingWorkgroup": "Riattiverai il gruppo di lavoro \"{{workgroup}}\". Gli utenti appartenenti a questo gruppo di lavoro potranno applicare le modifiche in base ai loro ruoli.",
+  "msgFillingEmpty": "Nessun riempimento disponibile",
   "msgIdentifierAlreadyUsed": "identificatore già in uso",
   "msgIdentifierDeletionAlreadyUsed": "Non puoi cancellare l'identificatore in uso",
+  "msgInstrumentsEmpty": "Gli strumenti sono associati alle tubazioni: nessuna tubazione disponibile",
   "msgReenablingTip": "sarai in grado di riattivarlo in seguito",
+  "msgStartigraphyEmpty": "Nessuna stratigrafia disponibile",
   "municipality": "Comune",
   "name": "Nome",
   "new": "Nuovo {{what}}",
   "newBorehole": "Nuova perforazione",
   "no": "No",
   "noComments": "Nessun commento",
+  "nothingToShow": "Niente da mostrare",
   "np": "Sconosciuto",
   "oneSelected": "Una perforazione selezionata",
   "original_name": "Nome originario",
@@ -224,6 +247,7 @@
   "qt_length": "Qualità profondità",
   "qt_location": "Qualità coordinate",
   "qt_top_bedrock": "QC top substrato",
+  "refElevationCasing": "Punto di riferimento altezza",
   "refresh": "ricarica",
   "reject": "Rifiuta",
   "rejected": "Respinto",
@@ -241,9 +265,10 @@
   "search": "cerca",
   "searchfilters": "Filtri di ricerca",
   "searchFiltersBoreholes": "Filtri specifici alla perforazione",
-  "searchFiltersLayers": "Filtri dei livelli della stratigrafia",
+  "searchFiltersLayers": "Filtri di ricerca dei livelli della stratigrafia",
   "setmanually": "Impostare manualmente",
   "show": "Mostra {{what}}",
+  "showAll": "Mostra tutti",
   "showallfields": "Mostra tutti i campi",
   "showHistory": "Mostra la storia",
   "someSelected": "{{howMany}} perforazioni selezionate",
@@ -252,6 +277,7 @@
   "status": "stato",
   "statuscomplete": "Completato",
   "statuscontrol": "Controllo scientifico",
+  "statusInstrument": "Stoto dello strumento",
   "statusedit": "Modifica",
   "statuspublic": "Pubblica",
   "statusvalid": "Validazione",
