--- a/public/locale/de/common.json
+++ b/public/locale/de/common.json
@@ -1,6 +1,6 @@
 {
   "version": "1.0.0",
-  "add": "Hinzufüden",
+  "add": "Hinzufügen",
   "addInstrument": "Instrument hinzufügen",
   "address": "Addresse",
   "admin": "Administrator",
@@ -30,14 +30,16 @@
   "bulkEditing": "Bulk-Editing",
   "cancel": "Abbrechen",
   "canton": "Kanton",
-  "casing": "",
+  "casing": "Verrohrung",
+  "casingId": "ID",
+  "casingName": "Name der Verrohrung",
   "centerselected": "Auf Auswahl zentrieren",
   "chro_str_top_bedrock": "Chronostrati Top Fels",
   "city": "Gemeinde",
   "clickLayer": "Klicken Sie für Informationen",
   "close": "Schlissen",
   "collapse": "Zuklappen",
-  "completion": "",
+  "completion": "Ausbau",
   "confirm": "Bestätigen",
   "copy": "Kopie erstellen",
   "create": "Erstellen",
@@ -50,9 +52,9 @@
   "csvFormat": "Dateiformat (.csv)",
   "cuttings": "Schnitt",
   "date": "Datum",
-  "dateSpudCasing": "Datum des Beginns der Arbeiten",
-  "dateFinishCasing": "Datum die Arbeiten beendet",
-  "dateAbandonmentCasing": "Datum der Aufgabe",
+  "dateSpudCasing": "Bohrbeginn",
+  "dateFinishCasing": "Ausbau Ende",
+  "dateAbandonmentCasing": "Stillegung",
   "degree": "Grad",
   "delete": "Löschen",
   "deleteForever": "Dauerhaft löschen",
@@ -74,7 +76,7 @@
   "editingEnabled": "Die Bearbeitung hat begonnen",
   "editingStart": "Bearbeitung beginnen",
   "editingStop": "Bearbeitung beenden",
-  "elevationCasing": "Höhe der Spitze der Rohrleitung, in m.ü.M.",
+  "elevationCasing": "Ansatzhöhe Verrohrung",
   "elevation_z": "Ansatzhöhe (müM)",
   "enable": "Aktivieren",
   "enabled": "Aktiviert",
@@ -107,16 +109,17 @@
   "exportInProgress": "Export in Bearbeitung",
   "extendlower": "Untere Schicht zum Top ausdehnen",
   "extendupper": "Obere Schicht nach unten ausdehnen",
-  "filling": "Befüllung",
+  "filling": "Hinterfüllung",
   "filterByHierarchicalUnits": "Nach hierarchischen Einheiten filtern",
   "filterbymap": "Mit Karteausschinitt filtern",
   "filterByName": "Nach Name filtern",
   "firstname": "Vorname",
-  "flowPublication": "Fluss der Veröffentlichung",
+  "flowPublication": "Publikations-Workflow",
   "flowPublicationStatus": "Status der Veröffentlichung",
   "flowRestart": "Neustart des Flusses",
   "french": "französisch",
   "from": "von",
+  "fromMeters": "von [m]",
   "fromdepth": "von Tiefe",
   "fromdiameter": "von Durchmesser",
   "fromelevation": "von Hohe",
@@ -142,15 +145,16 @@
   "importedData": "Importierte Daten",
   "inclination": "Inklination (°)",
   "inclinationdirection": "Einfallsrichtung (°)",
-  "instrument": "Instrument",
+  "instrument": "Instrumentierung",
+  "instrumentId": "ID",
   "invertedDepth": "Umgekehrte Tiefen",
   "inProgress": "in Bearbeitung",
   "italian": "italienisch",
   "kind": "Bohrtyp",
-  "kindCasing": "Typ der Rohrleitung",
-  "kindCasingLayer": "Typ des Rohrelements",
-  "kindFilling": "Typ der Füllung",
-  "kindInstrument": "Typ des Geräts",
+  "kindCasing": "Ausbautyp",
+  "kindCasingLayer": "Rohrtyp",
+  "kindFilling": "Hinterfüllungstyp",
+  "kindInstrument": "Instrumentierungstyp",
   "landuse": "Landnutzung",
   "lastExport": "Hier ist die letzte Export",
   "lastname": "Nachname",
@@ -204,7 +208,7 @@
   "mainStratigraphy": "Dies ist die Hauptstratigraphie",
   "map": "Karte",
   "materialCasingLayer": "Material",
-  "materialFilling": "Material der Füllung",
+  "materialFilling": "Material",
   "meter": "Meter",
   "msgCasingEmpty": "Kein Rohr verfügbar",
   "msgDeleteUser": "Der ausgewählte Benutzer kann für immer gelöscht werden, da derzeit keine Aktivitäten in der Datenbank vorhanden sind.",
@@ -247,7 +251,7 @@
   "qt_length": "QC Tiefe",
   "qt_location": "CQ Koordinaten",
   "qt_top_bedrock": "QC Top Fels",
-  "refElevationCasing": "Bezugspunkt der Höhe",
+  "refElevationCasing": "Referenz Ansatzhöhe",
   "refresh": "Aktualisieren",
   "reject": "Ablehnen",
   "rejected": "Abgelehnt",
@@ -289,7 +293,7 @@
   "sure": "Sind Sie sicher?",
   "terms": "Nutzungsbedingungen",
   "title": "BDMS",
-  "to": "bis",
+  "toMeters": "bis [m]",
   "todepth": "bis Tiefe",
   "todiameter": "bis Durchmesser",
   "toelevation": "bis Hohe",
