--- a/public/locale/en/common.json
+++ b/public/locale/en/common.json
@@ -31,6 +31,8 @@
   "cancel": "cancel",
   "canton": "Canton",
   "casing": "Casing",
+  "casingId": "ID",
+  "casingName": "Name of completion",
   "centerselected": "Center to selected",
   "chro_str_top_bedrock": "Chronostrati top bedrock",
   "city": "City",
@@ -50,9 +52,9 @@
   "csvFormat": "Comma-Separated Values (CSV) format",
   "cuttings": "Cuttings",
   "date": "Date",
-  "dateSpudCasing": "Spud date, date completion works started",
-  "dateFinishCasing": "Date completion works were finished",
-  "dateAbandonmentCasing": "Date when borehole was abandoned",
+  "dateSpudCasing": "Spud date",
+  "dateFinishCasing": "Finish date",
+  "dateAbandonmentCasing": "Date abandonment",
   "degree": "degree",
   "delete": "Delete",
   "deleteForever": "Delete forever",
@@ -74,7 +76,7 @@
   "editingEnabled": "Editing started",
   "editingStart": "Start editing",
   "editingStop": "Stop editing",
-  "elevationCasing": "Elevation of top of casing, in m.a.s.l",
+  "elevationCasing": "Completion elevation",
   "elevation_z": "Elevation (masl)",
   "enable": "enable",
   "enabled": "enabled",
@@ -107,7 +109,7 @@
   "exportInProgress": "Export in progress",
   "extendlower": "Extend lower layer to top",
   "extendupper": "Extend upper layer to bottom",
-  "filling": "Filling",
+  "filling": "Backfill",
   "filterByHierarchicalUnits": "Filter by hierarchical units",
   "filterbymap": "Filter by map",
   "filterByName": "Filter by name",
@@ -117,6 +119,7 @@
   "flowRestart": "Restart the workflow",
   "french": "french",
   "from": "from",
+  "fromMeters": "from [m]",
   "fromdepth": "from depth",
   "fromdiameter": "From diameter",
   "fromelevation": "From elevation",
@@ -142,14 +145,15 @@
   "importedData": "Imported data",
   "inclination": "Inclination (°)",
   "inclinationdirection": "Inclination direction (°)",
-  "instrument": "Instrument",
+  "instrument": "Instrumentation",
+  "instrumentId": "ID",
   "invertedDepth": "Inverted depths",
   "inProgress": "in progress",
   "italian": "italian",
   "kind": "Drilling type",
-  "kindCasing": "Type of casing",
-  "kindCasingLayer": "Type of casing element",
-  "kindFilling": "Type of filling",
+  "kindCasing": "Completion type",
+  "kindCasingLayer": "Casing type",
+  "kindFilling": "Type of backfill",
   "kindInstrument": "Type of instrument",
   "landuse": "Land use",
   "lastExport": "Here the last export",
@@ -203,8 +207,8 @@
   "loginScreen": "Login screen",
   "mainStratigraphy": "This is the main stratigraphy",
   "map": "Map",
-  "materialCasingLayer": "Material casing element is made of",
-  "materialFilling": "Filling material",
+  "materialCasingLayer": "Material",
+  "materialFilling": "Material",
   "meter": "meter",
   "msgCasingEmpty": "No casing available",
   "msgDeleteUser": "The selected user can be deleted forever because currently there is not any trace of activity in the database.",
@@ -247,7 +251,7 @@
   "qt_length": "QC depth",
   "qt_location": "CQ Coordinates",
   "qt_top_bedrock": "QC top bedrock",
-  "refElevationCasing": "Reference point of elevation",
+  "refElevationCasing": "Reference elevation",
   "refresh": "refresh",
   "reject": "Reject",
   "rejected": "Rejected",
@@ -289,7 +293,7 @@
   "sure": "Are you sure?",
   "terms": "Terms of service",
   "title": "BMS",
-  "to": "to",
+  "toMeters": "to [m]",
   "todepth": "to depth",
   "todiameter": "To diameter",
   "toelevation": "To elevation",
