--- a/public/locale/fr/common.json
+++ b/public/locale/fr/common.json
@@ -30,14 +30,16 @@
   "bulkEditing": "Édition en gros",
   "cancel": "Annuler",
   "canton": "Canton",
-  "casing": "Casing",
+  "casing": "Tubage",
+  "casingId": "ID",
+  "casingName": "Nom du tubage",
   "centerselected": "Centre sélectionné",
   "chro_str_top_bedrock": "Chronostrates du substrat supérieur",
   "city": "Ville",
   "clickLayer": "Cliquez sur un calque pour plus d'informations",
   "close": "Fermer",
   "collapse": "Réduire",
-  "completion": "Complétion",
+  "completion": "Aménagement",
   "confirm": "Confirmer",
   "copy": "Créer une copie",
   "create": "Créer",
@@ -50,9 +52,9 @@
   "csvFormat": "Format CSV",
   "cuttings": "Cut",
   "date": "Date",
-  "dateSpudCasing": "Date du début des travaux",
-  "dateFinishCasing": "Date de fin des travaux",
-  "dateAbandonmentCasing": "Date d'abandon du forage",
+  "dateSpudCasing": "Date de début du forage",
+  "dateFinishCasing": "Date de fin de l'aménagement",
+  "dateAbandonmentCasing": "Date de l'abandon",
   "degree": "Degrés",
   "delete": "Supprimer",
   "deleteForever": "Supprimer définitivement",
@@ -74,7 +76,7 @@
   "editingEnabled": "Le changement a commencé",
   "editingStart": "Commencer l'édition",
   "editingStop": "Arrêtez l'édition",
-  "elevationCasing": "Altitude du sommet du tubage, en m.a.s.l.",
+  "elevationCasing": "Altitude du tubage",
   "elevation_z": "Altitude (msl)",
   "enable": "Activer",
   "enabled": "Activé",
@@ -107,7 +109,7 @@
   "exportInProgress": "Exportation en cours",
   "extendlower": "Étendre la couche inférieure jusqu'au sommet",
   "extendupper": "Étendre la couche supérieure à la couche inférieure",
-  "filling": "Remplissage",
+  "filling": "Remblayage",
   "filterByHierarchicalUnits": "Filtrer par unité (hiérarchique)",
   "filterbymap": "Filtre avec la carte",
   "filterByName": "Filtrer par nom",
@@ -117,6 +119,7 @@
   "flowRestart": "Redémarrer le flux",
   "french": "français",
   "from": "De",
+  "fromMeters": "de [m]",
   "fromdepth": "De la profondeur",
   "fromdiameter": "À partir du diamètre",
   "fromelevation": "De l'altitude",
@@ -142,14 +145,15 @@
   "importedData": "Données importées",
   "inclination": "Inclinaison (°)",
   "inclinationdirection": "Direction d'inclinaison(°)",
-  "instrument": "Instrument",
+  "instrument": "Instrumentation",
+  "instrumentId": "ID",
   "invertedDepth": "Profondeurs inversées",
   "inProgress": "en cours",
   "italian": "italien",
   "kind": "Type de forage",
-  "kindCasing": "Type de tubage",
-  "kindCasingLayer": "Type d'élément de tubage",
-  "kindFilling": "Type de remplissage",
+  "kindCasing": "Type d'aménagement",
+  "kindCasingLayer": "Type de tubage",
+  "kindFilling": "Type de remblayage",
   "kindInstrument": "Type d'instrument",
   "landuse": "Utilisation du sol",
   "lastExport": "Voici la dernière exportation",
@@ -203,8 +207,8 @@
   "loginScreen": "Écran de connexion",
   "mainStratigraphy": "Ceci est la stratigraphie principale",
   "map": "Carte",
-  "materialCasingLayer": "Matériau de l'enveloppe",
-  "materialFilling": "Matériau de remplissage",
+  "materialCasingLayer": "Matériau",
+  "materialFilling": "Matériau",
   "meter": "Mètres",
   "msgCasingEmpty": "Aucun tubage disponible",
   "msgDeleteUser": "L'utilisateur sélectionné peut être supprimé par toujours parce qu'il n'y a aucune trace pour le moment d'activité dans la base de données.",
@@ -247,7 +251,7 @@
   "qt_length": "Qualité de profondeur",
   "qt_location": "Qualité coordonnée",
   "qt_top_bedrock": "Substrat supérieur QC",
-  "refElevationCasing": "Point de référence de l'élévation",
+  "refElevationCasing": "Référence d'altitude",
   "refresh": "Charge",
   "reject": "Rejeter",
   "rejected": "Rejeté",
@@ -274,7 +278,7 @@
   "someSelected": "{{howMany}} perforations sélectionnés",
   "srs": "SRS",
   "start": "Cette page est en italien",
-  "status": "ètat ",
+  "status": "status",
   "statuscomplete": "Terminé",
   "statuscontrol": "Contrôle scientifique",
   "statusInstrument": "Statut de l'instrument",
@@ -289,7 +293,7 @@
   "sure": "Êtes-vous sûr?",
   "terms": "Conditions de service",
   "title": "BMS",
-  "to": "a",
+  "toMeters": "à [m]",
   "todepth": "Jusqu'à la profondeur",
   "todiameter": "Jusqu'au diamètre",
   "toelevation": "Jusqu'à l'altitude",
