--- a/public/locale/it/common.json
+++ b/public/locale/it/common.json
@@ -30,7 +30,9 @@
   "bulkEditing": "Modifica in blocco",
   "cancel": "annulla",
   "canton": "Cantone",
-  "casing": "Involucro",
+  "casing": "Tubatura",
+  "casingId": "ID",
+  "casingName": "Nome della tubatura",
   "centerselected": "Centra selezionato",
   "chro_str_top_bedrock": "Chronostrati top substrato",
   "city": "Città",
@@ -50,8 +52,8 @@
   "csvFormat": "Formato CSV",
   "cuttings": "Taglio",
   "date": "Data",
-  "dateSpudCasing": "Data inizio lavori",
-  "dateFinishCasing": "Data completazione lavori",
+  "dateSpudCasing": "Data di inizio della perforazione",
+  "dateFinishCasing": "Data fine lavori",
   "dateAbandonmentCasing": "Data di abbandono",
   "degree": "gradi",
   "delete": "Elimina",
@@ -74,7 +76,7 @@
   "editingEnabled": "Modifica avviata",
   "editingStart": "Inizia modifica",
   "editingStop": "Interrompi modifica",
-  "elevationCasing": "Altezza della cima dell’involucro (m.s.m)",
+  "elevationCasing": "Altezza della cima dell’involucro",
   "elevation_z": "Altitudine (msl)",
   "enable": "abilitare",
   "enabled": "abilitati",
@@ -117,6 +119,7 @@
   "flowRestart": "Riavviare il flusso di lavoro",
   "french": "francese",
   "from": "da",
+  "fromMeters": "da [m]",
   "fromdepth": "dalla profondità",
   "fromdiameter": "da diametro",
   "fromelevation": "Da elevazione",
@@ -142,15 +145,16 @@
   "importedData": "Dati importati",
   "inclination": "Inclinazione (°)",
   "inclinationdirection": "Direzione inclinazione (°)",
-  "instrument": "Strumenti",
+  "instrument": "Strumentazione",
+  "instrumentId": "ID",
   "invertedDepth": "Profondità invertite",
   "inProgress": "in corso",
   "italian": "italiano",
   "kind": "Tipologia di perforazione",
   "kindCasing": "Tipologia involucro",
-  "kindCasingLayer": "Tipologia elemento involucro",
-  "kindFilling": "Tipologia riempimento",
-  "kindInstrument": "Tipologia strumento",
+  "kindCasingLayer": "Tipo tubatura",
+  "kindFilling": "Tipo di riempimento",
+  "kindInstrument": "Tipo di strumento",
   "landuse": "Uso del suolo",
   "lastExport": "Ecco l'ultima esportazione",
   "lastname": "Cognome",
@@ -203,8 +207,8 @@
   "loginScreen": "Schermata di login",
   "mainStratigraphy": "Questa è la stratigrafia principale",
   "map": "Mappa",
-  "materialCasingLayer": "Materiale dell’involucro",
-  "materialFilling": "Materiale di riempimento",
+  "materialCasingLayer": "Materiale",
+  "materialFilling": "Materiale",
   "meter": "metri",
   "msgCasingEmpty": "Nessuna tubazione disponibile",
   "msgDeleteUser": "L'utente selezionato può essere eliminato per sempre perché al momento non esiste alcuna traccia di attività nel database.",
@@ -247,7 +251,7 @@
   "qt_length": "Qualità profondità",
   "qt_location": "Qualità coordinate",
   "qt_top_bedrock": "QC top substrato",
-  "refElevationCasing": "Punto di riferimento altezza",
+  "refElevationCasing": "Referenza altitudine",
   "refresh": "ricarica",
   "reject": "Rifiuta",
   "rejected": "Respinto",
@@ -289,7 +293,7 @@
   "sure": "Sei sicuro?",
   "terms": "Termini di servizio",
   "title": "BMS",
-  "to": "a",
+  "toMeters": "a [m]",
   "todepth": "alla profondità",
   "todiameter": "a diametro",
   "toelevation": "A elevazione",
