--- a/public/locale/de/common.json
+++ b/public/locale/de/common.json
@@ -181,7 +181,7 @@
   "layer_lithology": "Lithologie / Petrologie",
   "layer_lithostratigraphy": "Lithostratigrafie",
   "layer_loading_fetch": "Lade Schicht..",
-  "layer_notes": "TAnmerkungen",
+  "layer_notes": "Anmerkungen",
   "layer_organic_component": "Organische Komponenten",
   "layer_plasticity": "Plastizität",
   "layer_qt_description": "QC Beschreibung",
